# AviSynth-Retinex

./: CHANGELOG.md  CMakeLists.txt  README.md
msvc/: Retinex.sln  Retinex.vcxproj  Retinex.vcxproj.filters
src/: Retinex.cpp  Retinex.rc
